[package]
name = "ceph-long-request-watcher"
version = "0.1.0"
edition = "2021"
authors = ["Remi Rampin <remi@rampin.org"]
description = "Checks /sys/kernel/debug/ceph for stuck requests"
readme = "README.md"
repository = "https://github.com/remram44/ceph-long-request-watcher"
keywords = ["ceph", "exporter", "metrics"]
license = "MIT"

[dependencies]
pretty_env_logger = "0.5"
tracing = { version = "0.1", default-features = false, features = ["log", "std"] }

once_cell = "1.20.2"
prometheus = "0.13"
regex = "1.11.1"

futures = "0.3"
tokio = { version = "1.40", default-features = false, features = ["net", "rt"] }
warp = { version = "0.3", default-features = false }

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
